--- a/extension/styles.css
+++ b/extension/styles.css
@@ -6,13 +6,13 @@
 }
 
 .upp-main-container {
-    min-width: calc(400px + 475px + 3em);
+    min-width: calc(400px + 585px + 3em);
     padding: 1em;
 	gap: 1em;
 	background: #F6F6F6;
 	border: 1px solid #000000;
 	display: grid;
-	grid-template-columns: minmax(400px, 2.25fr) minmax(475px, 3fr);
+	grid-template-columns: minmax(400px, 2.25fr) minmax(585px, 3fr);
 	grid-template-rows: auto auto;
 }
 
@@ -37,10 +37,20 @@
     align-items: center;
 }
 
-.upp-almalaurea-title {
-    margin-top: 0;
+.upp-secondary-title {
+    margin-top: 2px;
     height: 30px;
     margin-bottom: 14px;
+    cursor: pointer;
+    font-size: 1.2em !important;
+    color: gray;
+}
+
+.upp-secondary-title.selected {
+    border-bottom: 2px solid black;
+    padding-bottom: 2px; 
+    font-size: 1.3em !important;
+    color: black;
 }
 
 .upp-statistic-big {
@@ -58,7 +68,6 @@
 	margin-bottom: .75em;
 	border: 1px solid #000000;
 	background-color: #ffffff;
-	border-radius: 2px;
     position: relative;
 }
 
@@ -66,8 +75,6 @@
 	width: 0%;
 	height: 100%;
 	background-color: #434343;
-	border-top-left-radius: 2px;
-	border-bottom-left-radius: 2px;
 	display: flex;
 	align-items: center;
 	justify-content: right;
@@ -154,4 +161,17 @@
 .upp-tooltip:hover .upp-tooltip-text {
     visibility: visible;
     opacity: 1;
+}
+
+.upp-forecast-table {
+    font-family: math;
+    border-collapse: collapse;
+    border-radius: 2px;
+    width: 100%;
+}
+
+.upp-forecast-table td {
+    text-align: center;
+    font-size: 1.05em;
+    padding: 4px;
 }
