--- a/src/styles.css
+++ b/src/styles.css
@@ -83,12 +83,12 @@
     height: 100%;
     display: flex;
     align-items: center;
-    font-size: 1.25em;
-	font-weight: bold;
+    font-size: 1.35em;
+	font-weight: normal;
 	padding-right: .5em;
 	padding-left: .5em;
 	color: #ffffff;
-	font-family: cursive;
+    font-family: "STIX Two Math", "Times New Roman", serif;
 }
 
 .upp-grade-distribution-chart-container {
@@ -98,7 +98,8 @@
 
 .upp-info-text {
     color: #64748b;
-    font-family: optima;
+    font-style: italic;
+    font-family: "Segoe UI", "Candara", "Verdana", sans-serif;
     font-size: 1.1em;
 }
 
@@ -163,15 +164,22 @@
 }
 
 .upp-forecast-table {
-    font-family: math;
+    font-family: "STIX Two Math", "Times New Roman", serif;
     border-collapse: collapse;
     border-radius: 2px;
     width: 100%;
 }
 
+.upp-forecast-table-header {
+    /* Overwrite .upp-forecast-table td */
+    text-align: left !important;
+    padding-top: .75em !important;
+    padding-left: .75em !important;
+    font-family: "Open Sans", Verdana, Geneva, Arial, Helvetica, sans-serif;
+}
+
 .upp-forecast-table td {
     text-align: center;
-    font-size: 1.05em;
     padding-left: max(1%, 4px);
     padding-right: max(1%, 4px);
     padding-top: 3px;
